--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="card">
-            <img src="images/semangat0987.jpg" alt="Motivasi">
+            <img src="img/semangat0987.jpeg" alt="Motivasi">
             <h3>Motivasi Semangat Menjalani Hidup Sehat</h3>
             <p>"Hidup sehat adalah investasi terbaik untuk masa depan yang lebih baik."<br>
                "Setiap langkah kecil menuju hidup sehat adalah langkah menuju kebahagiaan."</p>
@@ -123,25 +123,25 @@
     </div>
     <div class="dokter-container">
         <div class="dokter-card">
-            <img src="images/diandr.jpg" alt="dr. Dian Widiastuti Vietara">
+            <img src="img/diandr.jpeg" alt="dr. Dian Widiastuti Vietara">
             <h3>dr. Dian Widiastuti Vietara, Sp.KJ K</h3>
             <p>Berfokus pada edukasi kesehatan mental bagi anak dan remaja serta pendampingan bagi orang tua.</p>
         </div>
 
         <div class="dokter-card">
-            <img src="images/santidr.jpg" alt="dr. Santi Yuliani">
+            <img src="img/santidr.jpeg" alt="dr. Santi Yuliani">
             <h3>dr. Santi Yuliani, M.Sc., Sp.KJ</h3>
             <p>Dikenal aktif memberikan edukasi tentang bahaya swadiagnosis dan pentingnya konsultasi profesional. Sering membahas relevansi kesehatan mental bagi generasi Z dan penggunaan aplikasi kesehatan.</p>
         </div>
 
         <div class="dokter-card">
-            <img src="images/zuldr.jpg" alt="dr. Zulvia Oasyari">
+            <img src="img/zuldr.jpeg" alt="dr. Zulvia Oasyari">
             <h3>dr. Zulvia Oasyari (Vivi Syarif), Sp.KJ</h3>
             <p>Spesialis Gizi Klinik. Membantu pasien dengan program diet sehat, obesitas, gizi buruk, dan pola makan seimbang.</p>
         </div>
 
         <div class="dokter-card">
-            <img src="images/jimidr.jpg" alt="dr. Jiemi Ardian">
+            <img src="img/jimidr.jpeg" alt="dr. Jiemi Ardian">
             <h3>dr. Jiemi Ardian, Sp.KJ</h3>
             <p>Salah satu psikiater yang sangat aktif di media sosial dalam memberikan literasi kesehatan mental agar lebih mudah dipahami masyarakat luas.</p>
         </div>
@@ -188,23 +188,23 @@
     </div>
     <div class="team-container">
         <div class="team-card">
-            <img src="images/ama.jpg" alt="Gamma fitrah rahmatika">
+            <img src="img/ama.jpeg" alt="Gamma fitrah rahmatika">
             <p>Gamma Fitrah Rahmatika</p>
         </div>
         <div class="team-card">
-            <img src="images/indri.jpg" alt="Indri Ayu Safitri">
+            <img src="img/indri.jpeg" alt="Indri Ayu Safitri">
             <p>Indri Ayu Safitri</p>
         </div>
         <div class="team-card">
-            <img src="images/meli.jpg" alt="Tri Melinda Sari">
+            <img src="img/meli.jpeg" alt="Tri Melinda Sari">
             <p>Tri Melinda Sari</p>
         </div>
         <div class="team-card">
-            <img src="images/rahma.jpg" alt="Miftahul Rohma">
+            <img src="img/rahma.jpeg" alt="Miftahul Rohma">
             <p>Miftahul Rohma</p>
         </div>
         <div class="team-card">
-            <img src="images/dika.jpg" alt="Adika Luis Fetra">
+            <img src="img/dika.jpeg" alt="Adika Luis Fetra">
             <p>Adika Luis Fetra</p>
         </div>
     </div>
@@ -215,15 +215,15 @@
     </div>
     <div class="team-container">
         <div class="team-card">
-            <img src="images/Logoypt.jpg" alt="Logo SAGARASKA">
+            <img src="img/Logoypt.jpeg" alt="Logo SAGARASKA">
             <p>Logo SAGARASKA</p>
         </div>
         <div class="team-card">
-            <img src="images/kesehatan.jpg" alt="Simbol Kesehatan">
+            <img src="img/kesehatan.jpeg" alt="Simbol Kesehatan">
             <p>Simbol Kesehatan</p>
         </div>
         <div class="team-card">
-            <img src="images/logokomputer.jpg" alt="Logo Komputer">
+            <img src="img/logokomputer.jpeg" alt="Logo Komputer">
             <p>Logo Teknologi</p>
         </div>
     </div>
